; ModuleID = '/home/carl/AnghaBench/libevent/extr_evdns.c_evdns_base_set_option.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_evdns.c_evdns_base_set_option.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evdns_base = type { i32 }

@DNS_OPTIONS_ALL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @evdns_base_set_option(%struct.evdns_base* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.evdns_base*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store %struct.evdns_base* %0, %struct.evdns_base** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load %struct.evdns_base*, %struct.evdns_base** %4, align 8
  %9 = call i32 @EVDNS_LOCK(%struct.evdns_base* %8)
  %10 = load %struct.evdns_base*, %struct.evdns_base** %4, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = load i32, i32* @DNS_OPTIONS_ALL, align 4
  %14 = call i32 @evdns_base_set_option_impl(%struct.evdns_base* %10, i8* %11, i8* %12, i32 %13)
  store i32 %14, i32* %7, align 4
  %15 = load %struct.evdns_base*, %struct.evdns_base** %4, align 8
  %16 = call i32 @EVDNS_UNLOCK(%struct.evdns_base* %15)
  %17 = load i32, i32* %7, align 4
  ret i32 %17
}

declare dso_local i32 @EVDNS_LOCK(%struct.evdns_base*) #1

declare dso_local i32 @evdns_base_set_option_impl(%struct.evdns_base*, i8*, i8*, i32) #1

declare dso_local i32 @EVDNS_UNLOCK(%struct.evdns_base*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
